--- a/app/src/main/res/layout/fragment_page2.xml
+++ b/app/src/main/res/layout/fragment_page2.xml
@@ -7,57 +7,46 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/page2"
+        android:src="@drawable/p2"
         android:scaleType="fitXY"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-
-        android:layout_marginTop="65dp">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
-            <ImageButton
-                android:id="@+id/zaufanie"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/zaufanie"
-                android:layout_margin="12dp"/>
-            <ImageButton
-                android:id="@+id/techonologia"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/technologia"
-                android:layout_margin="12dp"/>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <ImageButton
-                android:id="@+id/badania"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/badania"
-                android:layout_margin="12dp"/>
-            <ImageButton
-                android:id="@+id/pacjent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/pacjent"
-                android:layout_margin="12dp"/>
-        </LinearLayout>
-    </LinearLayout>
-
-    <ImageButton
+    <View
         android:id="@+id/next"
+        android:layout_width="170dp"
+        android:layout_height="58dp"
+        android:layout_gravity="right|bottom"
+        android:layout_marginBottom="@dimen/bottom_buttons_margin"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        />
+    <Button
+        android:id="@+id/show_pdf"
+        android:layout_width="170dp"
+        android:layout_height="18dp"
+        android:layout_gravity="right|bottom"
+        android:layout_marginBottom="@dimen/bottom_show_pdf_margin"
+
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:background="@android:color/transparent"
+        />
+    <View
+        android:id="@+id/back"
+        android:layout_width="170dp"
+        android:layout_height="58dp"
+        android:layout_gravity="left|bottom"
+        android:layout_marginBottom="@dimen/bottom_buttons_margin"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        />
+
+    <ImageView
+        android:id="@+id/angle_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/next_button"
-        android:layout_gravity="right|bottom"
-        android:layout_marginBottom="@dimen/bottom_buttons_margin"/>
+        android:src="@drawable/text"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="48dp"
+        />
+
 </FrameLayout>
