--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:src="@drawable/form_bg" />
+        android:src="@drawable/bgform" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -134,21 +134,33 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <ImageButton
-                        android:id="@+id/dalej"
-                        android:layout_width="wrap_content"
+                    <ImageView
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/botton_buttons"
+                        android:scaleType="fitXY"
+                        android:layout_gravity="bottom"/>
+
+                    <View
+                        android:id="@+id/dalej"
+                        android:layout_width="170dp"
+                        android:layout_height="58dp"
                         android:layout_gravity="right|bottom"
                         android:layout_marginBottom="@dimen/bottom_buttons_margin"
-                        android:background="@drawable/send_button" />
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:clickable="true"
+                        />
 
-                    <ImageButton
+                    <View
                         android:id="@+id/main_page"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="170dp"
+                        android:layout_height="58dp"
                         android:layout_gravity="left|bottom"
                         android:layout_marginBottom="@dimen/bottom_buttons_margin"
-                        android:background="@drawable/main_page_button" />
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:clickable="true"
+                         />
                 </FrameLayout>
 
             </RelativeLayout>
@@ -159,12 +171,6 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:src="@drawable/top_bar"
+        android:id="@+id/logo"
         android:layout_gravity="top"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|bottom"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="80dp"
-        android:src="@drawable/form_note"/>
 </FrameLayout>
