--- a/app/src/main/res/layout/fragment_page7.xml
+++ b/app/src/main/res/layout/fragment_page7.xml
@@ -8,86 +8,38 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/page7"
+        android:src="@drawable/p6"
         android:scaleType="fitXY"/>
 
-    <ImageView
-        android:id="@+id/page7_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/page7_left"
-        android:layout_marginLeft="35dp"
-        android:layout_gravity="center|left"
-        />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center|right"
-        android:layout_marginRight="35dp"
-        >
-        <ImageView
-            android:id="@+id/page7_right1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/page7_right1"
-            android:layout_gravity="left"
-            android:layout_margin="10dp"
-            />
-        <ImageView
-            android:id="@+id/page7_right2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/page7_right2"
-            android:layout_gravity="left"
-            android:layout_margin="10dp"
-            />
-        <ImageView
-            android:id="@+id/page7_right3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/page7_right3"
-            android:layout_gravity="left"
-            android:layout_margin="10dp"
-            />
-    </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
-        android:layout_gravity="center"
-        >
-        <include layout="@layout/angle_text"
-            android:id="@+id/angle_text"
-            />
-    </FrameLayout>
-
-    <ImageView
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/page7_mini_info"
-        android:layout_marginBottom="60dp"
-        android:layout_marginLeft="6dp"
-        android:layout_gravity="left|bottom"
-        />
-
-    <ImageButton
+    <View
         android:id="@+id/next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/next_button"
+        android:layout_width="170dp"
+        android:layout_height="58dp"
         android:layout_gravity="right|bottom"
-        android:layout_marginBottom="@dimen/bottom_buttons_margin"/>
+        android:layout_marginBottom="@dimen/bottom_buttons_margin"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        />
 
-    <ImageButton
+    <View
         android:id="@+id/main_page"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/main_page_button"
+        android:layout_width="170dp"
+        android:layout_height="58dp"
         android:layout_gravity="left|bottom"
-        android:layout_marginBottom="@dimen/bottom_buttons_margin"/>
+        android:layout_marginBottom="@dimen/bottom_buttons_margin"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        />
+
+    <Button
+        android:id="@+id/show_pdf"
+        android:layout_width="170dp"
+        android:layout_height="18dp"
+        android:layout_gravity="right|bottom"
+        android:layout_marginBottom="@dimen/bottom_show_pdf_margin"
+
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:background="@android:color/transparent"
+        />
 </FrameLayout>
